...
      "create.guest": "Create Guest",
      "update.guest": "Update Guest",
      "guest.stats": "Guest Overview",
      "notifications": "Notifications",
      "logout": "Logout",
      "success": "Success!",
      "phase": "Phase",
      "curfew": "Curfew",
      "overnights": "Overnights",
      "years": "Years",
      "months": "Months",
      "days": "Days",
      "sobriety.date": "Sobriety Date",
...
      "error.invalid.email": "Email invalid",
      "error.user.not.found": "User not found",
      "verify.email": "Email verification has been disabled.",
      "signout": "Sign Out",
      "weekly": "Weekly",
      "house.overview.weekdays.description": "{{daysLeft}} days to go",
      "residents": "Residents",
      "disputes": "Disputes",
      "payments": "Payments",
      "inventory": "Inventory",
      "chores": "Chores",
      "missed.chores": "missed chores",
      "available": "available",
...
