...
  if (isError) {
    return (
      <RatsScrollView contentContainerStyle={styles.container}>
        <ScreenHeader
          renderBackButton
          icon={<HelpIcon helpFn={handleSetPopover} setRef={setPopoverRef} />}
          header="My Houses"
        />
        <View style={{ marginTop: 20 }}>
          <RatsText text="Failed to load houses" style={{ color: color.red }} />
          {/* Could add retry button here */}
        </View>
      </RatsScrollView>
...
