...
  // Main App Routes
  Main = 'main',

  // Tab Routes
  House = 'house',
  Guest = 'guest',
  Activities = 'activities',
  Contacts = 'contacts',
  HouseChat = 'houseChat',
  Personal = 'personal',

  // House Stack Routes
  HouseSummary = 'houseSummary',
...
