...
            },
            headerShown: false,
          })}>
          <MainTab.Screen
            name={Routes.House}
            component={HouseSummary}
            options={{ tabBarButtonTestID: 'house-tab' }}
          />
          <MainTab.Screen
            name={Routes.Guest}
            component={GuestHome}
            options={{ tabBarButtonTestID: 'guest-tab' }}
          />
...
